# oscana

./: .gitignore  README.md  pyproject.toml
notebooks/: event_images.ipynb
notes/: sec_1_theory.md
oscana/: __init__.py  plotting.py  themes.py
res/: colours.json  numbers.json
res/variables/: sntp_std.txt
src/oscana/: __init__.py  constants.py  errors.py  evd.py  image.py  images.py  logger.py  plotting.py  themes.py  utils.py
src/oscana/configs/: logging.json
src/oscana/data/: __init__.py  base_loader.py  data_handler.py  data_loader.py  enumerations.py  f_metadata.py  functions.py  io_base.py  metadata.py  sntp_loader.py  t_metadata.py  transform.py
src/oscana/data/plugins/: pandas_io.py
src/oscana/evd/: __init__.py  app.py  image.py
