[tool.poetry]
name = "oscana"
version = "0.5.1"
description = "A very simple analysis package for neutrino oscillation experiments."
authors = ["Aditya Marathe <72881014+aditya-marathe@users.noreply.github.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/aditya-marathe/oscana"
package-mode = true
packages  = [
    { include = "oscana", from = "src" }
]
include = [
    { path = "res", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = ">=3.10"
python-dotenv = "*"
numpy = "*"
matplotlib = "*"
pandas = "*"
uproot = "*"
scipy = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.mypy]
python_executable = ".venv/bin/python"

[tool.black]
# Settings for the Black code formatter
line-length = 80

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
